# TodoApp

./: README.md  alembic.ini  pyproject.toml
alembic/versions/: 649a5f7ff4ef_initial_revision.py  93ce0439a3e3_rename_database_file.py
src/: main.py
src/adapters/: todo_adapter.py
src/adapters/db/: schema.py
src/domain/ports/: todo.py
src/domain/todo/: model.py  service.py
src/entrypoints/api/: main.py  router.py
src/entrypoints/api/todo/: router.py
